--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch index.html (disable sourcemaps)",
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome",
-            "file": "${workspaceFolder}/index.html",
-            "sourceMaps": false
+            //"sourceMaps": false,
+            "file": "${workspaceFolder}/index.html"
         }
-        // {
-        //     "name": "Launch index.html (disable sourcemaps)",
-        //     "type": "chrome",
-        //     "request": "launch",
-        //     //"sourceMaps": false,
-        //     "file": "${workspaceFolder}/index.html"
-        // }
     ]
 }
