Learned how to use VS code JSDoc Comments. Learned how to use Go To Definition in VS code. Learned more about the JSON.stringify function.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Launch index.html (disable sourcemaps)",
             "type": "chrome",
             "request": "launch",
-            //"sourceMaps": false,
+            "sourceMaps": false,
             "file": "${workspaceFolder}/index.html"
         }
     ]
